<resources>
    <string name="app_name">ResearchDB</string>

    <string name="menu_database_instructions">\t\t\tResearchDB is a sophisticated notes application to help you document important
        information, ideas, interest, and maybe even important research. ResearchDB is unique in that it requires you to document
        your sources and allows you to include supporting links and attachments. You simply create a database on a subject or idea
        and begin documenting.</string>

    <!-- MAIN MASTER ACTIVITY -->
    <string name="master_how_to_enter_db">Enter a new database name below and click the Add Database button:</string>
    <string name="master_label_create">Create Database</string>
    <string name="master_enter_db">"Enter a new database name here:"</string>
    <string name="master_hint">e.g., My_Database</string>
    <string name="master_add_db">Add Database</string>
    <string name="master_label_import">Import Database</string>
    <string name="master_how_to_import_db">"Click the Import Database button to load a ResearchDB database."</string>
    <string name="master_import_db">Import Database</string>
    <string name="master_label_select">Select Database</string>
    <string name="master_how_to_select_db">"Click to select a database from the list below:"</string>
    <string name="master_no_db_selected">No Database Selected</string>
    <string name="allowCharacters">ABCDEFGHIJKLMNOPQRSTUVWXYZ_abcdefghijklmnopqrstuvwxyz.0123456789</string>
    <string name="allowDateCharacters">0123456789/</string>

    <!-- MAIN MASTER RECYCLERVIEW -->
    <string name="master_delete">Delete</string>

    <!-- MENU and MENU ITEMS -->
    <string name="master_guide">Guide</string>
    <string name="menu_title_file">File</string>
    <string name="menu_title_edit">Edit</string>
    <string name="menu_title_help">Help</string>

    <!-- TOOLBAR -->
    <string name="toolbar_search">SEARCH</string>
    <string name="toolbar_add">ADD NOTE</string>
    <string name="toolbar_edit">EDIT NOTE</string>
    <string name="toolbar_view">VIEW NOTE</string>

    <!-- FILE -->
    <string name="menu_title_database">Database</string>
    <string name="menu_title_note">Note</string>
    <string name="menu_title_print">Print</string>
    <string name="menu_title_close">Close</string>

    <string name="menu_title_open_create_database">Open/Create Database</string>
    <string name="menu_title_export_database">Export Database</string>
    <string name="menu_title_delete_database">Delete Database</string>
    <string name="menu_title_backup_database">Backup Database</string>

    <string name="menu_title_add_note">Add Note</string>
    <string name="menu_title_note_import">Import Note</string>
    <string name="menu_title_note_export">Export Note</string>
    <string name="menu_title_export_selection">Selection</string>
    <string name="menu_title_export_results">Search Results</string>

    <!-- EDIT -->
    <string name="menu_title_clear">Clear Fields</string>
    <string name="menu_title_add_import_note">Add/Import Note</string>
    <string name="menu_title_edit_note">Edit Note</string>
    <string name="menu_title_update_note">Update Note</string>
    <string name="menu_title_mark_note_for_delete">Mark Note for Delete</string>
    <string name="menu_title_unmark_note_for_delete">Un-Mark Note for Delete</string>
    <string name="menu_title_review_notes_for_delete">Review Notes for Delete</string>
    <string name="menu_title_permanently_delete_note">Permanently Delete Note</string>

    <!-- HELP -->
    <string name="menu_title_manual">ResearchDB Manual</string>
    <string name="menu_title_about">About</string>

    <!-- FIELD LABELS -->
    <string name="lbl_note_id">ID:</string>
    <string name="lbl_note_type">Type:</string>
    <string name="lbl_note_summary">Summary:</string>
    <string name="lbl_note_source">Source:</string>
    <string name="lbl_note_Authors">Author(s):</string>
    <string name="lbl_note_topic">Topic:</string>
    <string name="lbl_note_comment">Comment:</string>
    <string name="lbl_note_term">Term:</string>
    <string name="lbl_note_question">Question:</string>
    <string name="lbl_note_quote">Quote:</string>
    <string name="lbl_note_file">File(s):</string>
    <string name="lbl_note_hyperlink">Retrieve:</string>
    <string name="lbl_note_date">Date:</string>
    <string name="lbl_note_volume">Volume:</string>
    <string name="lbl_note_edition">Edition:</string>
    <string name="lbl_note_issue">Issue:</string>
    <string name="lbl_note_pgs_paras">Pg/Para(s):</string>
    <string name="lbl_note_timestamp">TimeStamp:</string>
    <string name="lbl_tab_quote_term">Quote and Term</string>

    <!-- FILE RELATED -->
    <string name="lbl_column_delete">Delete</string>
    <string name="lbl_tab_files">File(s)</string>
    <string name="lbl_column_filename">Filename</string>
    <string name="lbl_column_filepath">Filepath</string>
    <string name="lbl_column_file_id">FileID</string>

    <!-- HINTS -->
    <string name="hint_comment">Comment</string>
    <string name="hint_type">Type</string>
    <string name="hint_source">Source</string>
    <string name="hint_question">Question</string>
    <string name="hint_authors">Author(s)</string>
    <string name="hint_term">Term</string>
    <string name="hint_topic">Topic</string>
    <string name="hint_topic_1_3">Topic (1-3 Words Only)</string>
    <string name="hint_quote">Quote</string>
    <string name="hint_summary">Summary (Be brief - limit 75 chars)</string>
    <string name="hint_hyperlink">Hyperlink</string>
    <string name="hint_date">mm/dd/yyyy</string>
    <string name="autoHint_date">yyyy, mm/yyyy, mm/dd/yyyy</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_edition">Edition</string>
    <string name="hint_issue">Issue</string>
    <string name="hint_pgs_paras">Pg(s)/Para(s)</string>
    <string name="hint_timestamp">hh:mm:ss</string>
    <string name="hint_custom_Search">Search (Checkbox Exact)</string>


    <string name="add_topic">Add or Select a Topic</string>
    <string name="add_source">Add or Select a Source</string>
    <string name="add_question">Add or Select a Question</string>

    <!-- POPUP -->
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_browse">Browse</string>
    <string name="list_authors">listAuthors</string>

    <!-- Buttons -->
    <string name="btn_add_author">Add Author</string>
    <string name="btn_del_author">Delete Author</string>
    <string name="btn_add_file">Add File</string>

    <!-- PHRASES -->
    <string name="add_author_phrase">For new sources add new/existing author(s) below</string>
    <string name="multiple_authors">Multiple authors for the same title.</string>
    <string name="new_source">New Source</string>

    <!-- Arrays -->
    <string name="empty"/>
    <string name="article">Article</string>
    <string name="audio">Audio</string>
    <string name="book">Book</string>
    <string name="journal">Journal</string>
    <string name="periodical">Periodical</string>
    <string name="question">Question</string>
    <string name="quote">Quote</string>
    <string name="term">Term</string>
    <string name="video">Video</string>
    <string name="website">Website</string>
    <string name="other">Other</string>

    <string name="firstInstall">firstInstall:=</string>
    <string name="java">java:=</string>
    <string name="android">android:=</string>
    <string name="version">version:=</string>
    <string name="de_fault">default:=</string>
    <string name="database">database:=</string>
    <string name="dbPath">dbPath:=</string>
    <string name="prevDBPath">prevDBPath:=</string>
    <string name="manualDOCX">manualDOCX:=</string>
    <string name="manualPDF">manualPDF:=</string>
    <string name="userLog">userLog:=</string>
</resources>
