<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        tools:context=".ViewNote"
        android:id="@+id/lvl_View_Question">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView1"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/ConstraintLayout2">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:hint="@string/hint_type"
                    android:ems="10"
                    android:id="@+id/viewSourceType"
                    android:singleLine="true" android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/lblViewType"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblViewType" android:layout_marginStart="5dp"/>

            <TextView
                    android:text="@string/lbl_note_topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:id="@+id/lbl_View_Topic"
                    android:textStyle="bold" android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/viewSourceType"
                    app:layout_constraintBaseline_toBaselineOf="@+id/viewSourceType"
                    android:layout_marginStart="10dp"/>
            <TextView
                    android:text="@string/lbl_note_question"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:gravity="end"
                    android:id="@+id/lbl_View_Question" android:textStyle="bold"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblViewType" android:layout_marginTop="5dp"/>

            <TextView
                    android:id="@+id/viewQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:hint="@string/hint_question"
                    android:ems="10"
                    android:singleLine="false" android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/lbl_View_Question"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lbl_View_Question"/>


            <TextView
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:hint="@string/hint_topic"
                    android:ems="10"
                    android:id="@+id/viewTopic"
                    android:singleLine="true" android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/lbl_View_Topic"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lbl_View_Topic"
                    android:layout_marginStart="5dp"/>
            <TextView
                    android:text="@string/lbl_note_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:id="@+id/lblViewType"
                    android:textSize="12sp" android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="5dp" android:layout_marginStart="5dp"/>

            <TextView
                    android:text="@string/lbl_note_summary"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_summary"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="5dp"
                    android:gravity="end"
                    android:id="@+id/lbl_View_Summary"
                    app:layout_constraintTop_toBottomOf="@+id/viewQuestion"
                    android:layout_marginTop="15dp" android:padding="5dp"
                    android:textStyle="bold"
                    android:background="@color/colorWhite"
                    android:textSize="12sp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/viewSummary" android:background="@color/colorWhite" android:textSize="12sp"
                    android:padding="5dp" app:layout_constraintStart_toEndOf="@+id/lbl_View_Summary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lbl_View_Summary"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

            <TextView
                    android:text="@string/lbl_note_comment"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_View_Comment"
                    android:textStyle="bold" android:background="@color/colorWhite"
                    android:textSize="12sp" android:padding="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/viewSummary"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="5dp" android:layout_marginTop="5dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:padding="5dp"
                    android:hint="@string/hint_comment"
                    android:textSize="12sp"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/viewComment"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_View_Comment"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

            <TextView android:layout_width="67dp" android:layout_height="wrap_content"
                      android:id="@+id/lbl_view_Hyperlink"
                      android:text="@string/lbl_note_hyperlink"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="5dp"
                      android:gravity="end"
                      app:layout_constraintTop_toBottomOf="@+id/viewComment"
                      android:layout_marginTop="15dp" android:padding="5dp"
                      android:textStyle="bold"
                      android:background="@color/colorWhite"
                      android:textSize="12sp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/viewHyperlink"
                    android:background="@color/colorWhite"
                    android:textSize="12sp"
                    android:padding="5dp"
                    app:layout_constraintStart_toEndOf="@+id/lbl_view_Hyperlink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lbl_view_Hyperlink"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

            <TextView
                    android:text="@string/lbl_note_quote"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:gravity="end"
                    android:id="@+id/lblViewQuote" android:textStyle="bold" android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewHyperlink" android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tab_View_Quote"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/hint_quote"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/lblViewQuote"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblViewQuote"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            <TextView
                    android:text="@string/lbl_note_term"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblViewTerm"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:gravity="end"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tab_View_Quote"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tab_View_Term" android:hint="@string/hint_term"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblViewTerm"
                    app:layout_constraintStart_toEndOf="@+id/lblViewTerm" android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            <TableLayout
                    android:id="@+id/table_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorDkGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tab_View_Term"

                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp" android:layout_marginStart="5dp">

            </TableLayout>

            <TextView
                    android:text="@string/lbl_note_source"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:id="@+id/lblViewSource" android:textStyle="bold" android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/table_files"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewSource"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintStart_toEndOf="@id/lblViewSource"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_source"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp" app:layout_constraintBaseline_toBaselineOf="@+id/lblViewSource"/>
            <TextView
                    android:text="@string/lbl_note_Authors"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblViewAuthors"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewSource"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp" android:textStyle="bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewAuthors" android:hint="@string/hint_authors"
                    android:padding="5dp"
                    android:background="@color/colorWhite"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/lblViewAuthors" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lblViewAuthors"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>